--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/vite": "^4.1.10",
         "autoprefixer": "^10.4.21",
-        "axios": "^1.8.2",
+        "axios": "^1.10.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.5.5",
+        "postcss": "^8.5.6",
         "tailwindcss": "^4.1.10",
         "vite": "^6.3.5"
     },
@@ -82,6 +83,7 @@
         "picomatch": "^4.0.2",
         "postcss-value-parser": "^4.2.0",
         "proxy-from-env": "^1.1.0",
+        "react-router-dom": "^7.6.2",
         "require-directory": "^2.1.1",
         "rollup": "^4.43.0",
         "rxjs": "^7.8.2",
